--- a/ps4.html
+++ b/ps4.html
@@ -10,7 +10,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background: #f5f5f5;
+      background: #D3D3FF;
       font-family: Arial, sans-serif;
     }
     button {
@@ -18,19 +18,19 @@
       font-size: 18px;
       border: none;
       border-radius: 8px;
-      background-color: #008080;
+      background-color: #00FFFF;
       color: white;
       cursor: pointer;
     }
     button:hover {
-      background-color: #0056b3;
+      background-color: #008080;
     }
   </style>
 </head>
 <body>
   <!-- Replace the href with your deeplink (e.g., myapp://home or https://example.com) -->
   <a href="psgm:play?id=CUSA52955&amp;arg=%7B%22target%22%3A%22%2Fshow%2F49923020951002%22%2C%22cn%22%3A%22monaco%22%2C%22ci%22%3A%22ThirdParty%2FSonyPlaystationFeed%2FMonaco%22%2C%22um%22%3A%22Deeplink%22%2C%22us%22%3A%22PlayStation4%22%7D">
-    <button>Click Me</button>
+    <button>Teal Me</button>
   </a>
 </body>
 </html>
