--- a/ps4.html
+++ b/ps4.html
@@ -18,7 +18,7 @@
       font-size: 18px;
       border: none;
       border-radius: 8px;
-      background-color: #00FFFF;
+      background-color: #00AEAE;
       color: white;
       cursor: pointer;
     }
